--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
   <!-- Załaduj nasz komponent reactowy. -->
+  <script type="text/babel" src="ListItems.js"></script>
+  <script type="text/babel" src="Item.js"></script>
+  <script type="text/babel" src="InfoContainer.js"></script>
   <script type="text/babel" src="App.js"></script>
 </body>
 
